--- a/less/main.less
+++ b/less/main.less
@@ -94,7 +94,9 @@ a {
 // Global styling
 body {
   font-family: @base-font;
+  font-size: 18px;
   line-height: 1.5em;
+
   background-color: @white;
 }
 
@@ -122,7 +124,7 @@ h6 {
 }
 
 p {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 strong {
