--- a/less/main.less
+++ b/less/main.less
@@ -300,6 +300,9 @@ header[role="banner"] {
   .navbar-header {
     margin-top: 10px;
   }
+  .navbar-toggle {
+    margin-top: 5px;
+  }
   .navigation-left{
     .make-md-column(6);
   }
